--- a/img/style.css
+++ b/img/style.css
@@ -3,18 +3,20 @@
     padding: 0;
     margin: 0;
 }
-.banner{
+.banner , .container {
     display: flex;
     align-items: center;
     background-color: black;
     color: white;
     border-radius: 10px;
-}
-.container{
+    margin: 50px auto;
     max-width: 1280px;
     margin: auto;
 
+
+ 
 }
+
 #h2{
     font-size: 70px;
     font-weight: bold;
@@ -36,4 +38,7 @@
 .btn:hover{
     background-color: blue;
     color: black;
+}
+.banner-description{
+    padding-left: 45px;
 }
